Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -46,7 +46,10 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "\n"
+    "\n",
+    "f = open('nyc_2001_campaign_finance.json')\n",
+    "data = json.load(f)\n",
+    "print(type(data))"
    ]
   },
   {
