--- a/index.ipynb
+++ b/index.ipynb
@@ -46,6 +46,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
+    "import json \n",
     "\n",
     "f = open('nyc_2001_campaign_finance.json')\n",
     "data = json.load(f)\n",
