Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -41,11 +41,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
    "source": [
     "#Your code here\n",
+    "\n",
     "import json \n",
     "\n",
     "f = open('nyc_2001_campaign_finance.json')\n",
