--- a/index.ipynb
+++ b/index.ipynb
@@ -75,7 +75,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Your code here"
+    "### Your code here\n",
+    "type(data)"
    ]
   },
   {
