Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -71,9 +71,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### Your code here\n",
     "type(data)"
@@ -92,7 +103,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "\n",
+    "dat"
    ]
   },
   {
