--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "\n",
+    "data"
    ]
   },
   {
