--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n",
+    "data['meta']"
    ]
   },
   {
